# tcc-engenharia-eletrica

monografia/: TCC.tex  TCC_Sebastião_2023.1.tex  bibliography.bib  main.tex
monografia - Copia/: bibliography.bib
monografia - Copia/contents/chapters/: conclusao.tex  introducao.tex  metodologia.tex  referencial.tex  resultados.tex
monografia - Copia/contents/post_textual/: apendice_a.tex  apendice_b.tex  apendice_d.tex
monografia - Copia/contents/pre_textual/: abstract.tex  epigrafe.tex  listas.tex  resumo.tex
monografia - Copia/illustrations/codes/: flicker.py  voltage_imbalance.py  voltage_variation.py
monografia - Copia/settings/: inputs.tex  packages.tex  styles.sty
monografia/contents/chapters/: conclusao.tex  introducao.tex  metodologia.tex  referencial.tex  resultados.tex
monografia/contents/post_textual/: apendice_c.tex
monografia/contents/pre_textual/: abstract.tex  agradecimentos.tex  dedicatoria.tex  epigrafe.tex  ficha_catalografica.tex  resumo.tex
monografia/illustrations/codes/: frequency.py  harmonics.py  power_factor.py
monografia/settings/: inputs.tex  packages.tex  pdf.tex  styles.sty
qee/: code.ipynb  main.py  pyproject.toml  tipagem_colunas.json
qee/data/: 202304071810_202304080130_3_ET-5061C.csv
qee/qee/classes/: prodist.py
qee/qee/constants/: __init__.py  prodist.py  prodist_m8.py
qee/qee/functions/: __init__.py  classify_voltage.py  get_files_by_extension.py  read_files_by_extension.py
