[tool.poetry]
name = "qee"
version = "0.1.0"
description = ""
authors = ["Tião Nazário <tiaogogo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
xlrd = "^2.0.1"
pylint = "^2.17.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
